# awari

./: .gitignore  Cargo.toml  README.rst  build.rs
data/: get_estimates.sh  plot_access.py  plot_estimates.py  plot_scores.py
drafts/: awari.py
encoding/: coding.agda  coding.py  description.rst
remarks/: comp_analysis.rst  encoding.rst  rust-tricks.rst
src/: awari.rs  lib.rs  main.rs  models.rs  ra.rs  retrograde.rs  storage.rs  tests.rs  utils.rs  viz.rs
