[package]

name = "awari"
version = "0.0.1"
authors = [ "peio <peio.borthelle@ens-lyon.fr>" ]
build = "build.rs"

[dependencies]
log = "0.3"
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8"

[dev-dependencies]
rand = "0.3"
quickcheck = "^0.4"
quickcheck_macros = "^0.4"

[profile.release]
debug = true
