[package]

name = "awari"
version = "0.0.1"
authors = [ "peio <peio.borthelle@ens-lyon.fr>" ]
build = "build.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
lazy_static = "0.2"
rand = "0.3"
tempfile = "2.1.5"
time = "0.1"
libc = "0.2"

[dev-dependencies]
quickcheck = "^0.4"
quickcheck_macros = "^0.4"

[profile.release]
debug = true
lto = true
